--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@formkit/themes": "^0.17.2",
     "@formkit/vue": "^0.17.2",
     "@mdi/font": "7.2.96",
+    "@popperjs/core": "^2.11.8",
     "core-js": "3.30.2",
     "firebase": "^9.22.1",
     "pinia": "2.1.3",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.4",
+    "@esbuild/linux-x64": "^0.18.5",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.37.0",
     "eslint-plugin-vue": "^9.3.0",
