--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mbv.app",
   "author": "AndyKo",
-  "version": "0.0.1",
+  "version": "0.5.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -24,6 +24,7 @@
     "@formkit/vue": "^0.17.2",
     "@mdi/font": "7.2.96",
     "@popperjs/core": "^2.11.8",
+    "@vueup/vue-quill": "^1.2.0",
     "core-js": "3.30.2",
     "firebase": "^9.22.1",
     "pinia": "2.1.3",
@@ -39,7 +40,6 @@
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.4",
-    "@esbuild/linux-x64": "^0.18.5",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.37.0",
     "eslint-plugin-vue": "^9.3.0",
