--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "vue": "3.3.4",
     "vue-lite-youtube-embed": "^1.2.0",
     "vue-router": "4.2.2",
-    "vuetify": "3.3.2",
+    "vuetify": "3.3.6",
     "webfontloader": "^1.0.0",
     "yup": "^1.2.0"
   },
@@ -45,6 +45,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "sass": "^1.60.0",
     "vite": "^4.2.0",
+    "vite-plugin-vue-devtools": "^0.4.11",
     "vite-plugin-vuetify": "^1.0.0"
   }
 }
