--- a/package.json
+++ b/package.json
@@ -10,42 +10,42 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@capacitor/android": "^5.0.4",
-    "@capacitor/app": "^5.0.2",
-    "@capacitor/core": "^5.0.4",
-    "@capacitor/ios": "^5.0.4",
-    "@capacitor/local-notifications": "^5.0.2",
-    "@capacitor/push-notifications": "^5.0.2",
-    "@capacitor/splash-screen": "^5.0.2",
-    "@capacitor/status-bar": "^5.0.2",
-    "@formkit/addons": "^0.17.2",
-    "@formkit/i18n": "^0.17.2",
-    "@formkit/themes": "^0.17.2",
-    "@formkit/vue": "^0.17.2",
+    "@capacitor/android": "^5.2.2",
+    "@capacitor/app": "^5.0.6",
+    "@capacitor/core": "^5.2.2",
+    "@capacitor/ios": "^5.2.2",
+    "@capacitor/local-notifications": "^5.0.6",
+    "@capacitor/push-notifications": "^5.0.6",
+    "@capacitor/splash-screen": "^5.0.6",
+    "@capacitor/status-bar": "^5.0.6",
+    "@formkit/addons": "^0.17.5",
+    "@formkit/i18n": "^0.17.5",
+    "@formkit/themes": "^0.17.5",
+    "@formkit/vue": "^0.17.5",
     "@mdi/font": "7.2.96",
     "@popperjs/core": "^2.11.8",
     "@vueup/vue-quill": "^1.2.0",
-    "core-js": "3.30.2",
-    "firebase": "^9.22.1",
-    "pinia": "2.1.3",
+    "core-js": "3.32.0",
+    "firebase": "^10.1.0",
+    "pinia": "2.1.6",
     "roboto-fontface": "*",
     "v-calendar": "^3.0.3",
-    "vee-validate": "^4.9.6",
+    "vee-validate": "^4.11.0",
     "vue": "3.3.4",
     "vue-lite-youtube-embed": "^1.2.0",
-    "vue-router": "4.2.2",
-    "vuetify": "3.3.6",
+    "vue-router": "4.2.4",
+    "vuetify": "3.3.10",
     "webfontloader": "^1.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@capacitor/cli": "^5.0.4",
+    "@capacitor/cli": "^5.2.2",
     "@vitejs/plugin-vue": "^4.2.3",
-    "eslint": "^8.37.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "sass": "^1.60.0",
-    "vite": "^4.2.0",
-    "vite-plugin-vue-devtools": "^0.4.11",
+    "eslint": "^8.46.0",
+    "eslint-plugin-vue": "^9.16.1",
+    "sass": "^1.64.2",
+    "vite": "^4.4.7",
+    "vite-plugin-vue-devtools": "^1.0.0-beta.6",
     "vite-plugin-vuetify": "^1.0.0"
   }
 }
