--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix --ignore-path .gitignore"
+    "lint": "eslint . --fix --ignore-path .gitignore",
+    "ionic:build": "npm run build",
+    "ionic:serve": "npm run dev"
   },
   "dependencies": {
     "@capacitor/android": "^5.2.2",
-    "@capacitor/app": "^5.0.6",
-    "@capacitor/core": "^5.2.2",
-    "@capacitor/ios": "^5.2.2",
+    "@capacitor/app": "5.0.6",
+    "@capacitor/core": "5.2.2",
+    "@capacitor/haptics": "5.0.6",
+    "@capacitor/ios": "5.2.2",
+    "@capacitor/keyboard": "5.0.6",
     "@capacitor/local-notifications": "^5.0.6",
     "@capacitor/push-notifications": "^5.0.6",
     "@capacitor/splash-screen": "^5.0.6",
-    "@capacitor/status-bar": "^5.0.6",
+    "@capacitor/status-bar": "5.0.6",
     "@formkit/addons": "^0.17.5",
     "@formkit/i18n": "^0.17.5",
     "@formkit/themes": "^0.17.5",
@@ -39,7 +43,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@capacitor/cli": "^5.2.2",
+    "@capacitor/cli": "5.2.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.46.0",
     "eslint-plugin-vue": "^9.16.1",
