Build for Android. Everything works fine. thisisawesome

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 node_modules
 /dist
 /ios
+/android
 
 # local env files
 .env
@@ -24,3 +25,4 @@ pnpm-debug.log*
 *.sw?
 
 resources/ios/**/*
+resources/android/**/*
