--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mbv.app",
   "author": "AndyKo",
-  "version": "0.6.0",
+  "version": "0.8.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -13,10 +13,10 @@
     "ionic:serve": "npm run dev"
   },
   "dependencies": {
-    "@capacitor/android": "5.2.2",
+    "@capacitor/android": "5.2.3",
     "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.2.2",
-    "@capacitor/ios": "5.2.2",
+    "@capacitor/core": "5.2.3",
+    "@capacitor/ios": "5.2.3",
     "@formkit/addons": "^0.17.5",
     "@formkit/i18n": "^0.17.5",
     "@formkit/themes": "^0.17.5",
@@ -34,18 +34,18 @@
     "vue-lite-youtube-embed": "^1.2.0",
     "vue-picture-input": "^3.0.1",
     "vue-router": "4.2.4",
-    "vuetify": "3.3.11",
+    "vuetify": "3.3.12",
     "webfontloader": "^1.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@capacitor/cli": "5.2.2",
+    "@capacitor/cli": "5.2.3",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.46.0",
-    "eslint-plugin-vue": "^9.16.1",
-    "sass": "^1.64.2",
-    "vite": "^4.4.8",
-    "vite-plugin-vue-devtools": "^1.0.0-beta.6",
+    "eslint-plugin-vue": "^9.17.0",
+    "sass": "^1.65.1",
+    "vite": "^4.4.9",
+    "vite-plugin-vue-devtools": "^1.0.0-rc.0",
     "vite-plugin-vuetify": "^1.0.0"
   }
 }
