--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/android": "5.2.3",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.2.3",
+    "@capacitor/device": "^5.0.6",
     "@capacitor/ios": "5.2.3",
     "@formkit/addons": "^0.17.5",
     "@formkit/i18n": "^0.17.5",
