--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "@capacitor/core": "5.2.3",
     "@capacitor/device": "^5.0.6",
     "@capacitor/ios": "5.2.3",
-    "@formkit/addons": "^0.17.5",
-    "@formkit/i18n": "^0.17.5",
-    "@formkit/themes": "^0.17.5",
-    "@formkit/vue": "^0.17.5",
+    "@capacitor/local-notifications": "^5.0.6",
+    "@formkit/addons": "^0.18.3",
+    "@formkit/i18n": "^0.18.3",
+    "@formkit/themes": "^0.18.3",
+    "@formkit/vue": "^0.18.3",
     "@mdi/font": "7.2.96",
     "@popperjs/core": "^2.11.8",
     "@vueup/vue-quill": "^1.2.0",
-    "core-js": "3.32.0",
-    "firebase": "^10.1.0",
+    "core-js": "3.32.1",
+    "firebase": "^10.2.0",
     "pinia": "2.1.6",
     "roboto-fontface": "*",
     "v-calendar": "^3.0.3",
@@ -35,18 +36,18 @@
     "vue-lite-youtube-embed": "^1.2.0",
     "vue-picture-input": "^3.0.1",
     "vue-router": "4.2.4",
-    "vuetify": "3.3.12",
+    "vuetify": "3.3.13",
     "webfontloader": "^1.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@capacitor/cli": "5.2.3",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "eslint": "^8.46.0",
+    "@vitejs/plugin-vue": "^4.3.1",
+    "eslint": "^8.47.0",
     "eslint-plugin-vue": "^9.17.0",
-    "sass": "^1.65.1",
+    "sass": "^1.66.1",
     "vite": "^4.4.9",
-    "vite-plugin-vue-devtools": "^1.0.0-rc.0",
+    "vite-plugin-vue-devtools": "^1.0.0-rc.2",
     "vite-plugin-vuetify": "^1.0.0"
   }
 }
