--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,14 +1,13 @@
 {
   "appId": "mbv.app",
-  "appName": "mbv.app",
+  "appName": "Миссия 'Благая Весть'",
   "webDir": "dist",
   "server": {
     "androidScheme": "https"
   }, 
   "plugins": {
-    "Device" : {
-      
-    },
+    "Device" : {},
+    "Network": {},
     "LocalNotifications": {
       "smallIcon": "ic_stat_icon_config_sample",
       "iconColor": "#488AFF",
