--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/ios": "5.2.3",
     "@capacitor/local-notifications": "^5.0.6",
     "@capacitor/network": "^5.0.6",
+    "@capacitor/splash-screen": "^5.0.6",
     "@formkit/addons": "^0.18.3",
     "@formkit/i18n": "^0.18.3",
     "@formkit/themes": "^0.18.3",
