--- a/package.json
+++ b/package.json
@@ -13,43 +13,44 @@
     "ionic:serve": "npm run dev"
   },
   "dependencies": {
-    "@capacitor/android": "5.3.0",
+    "@capacitor/android": "5.5.0",
     "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.3.0",
+    "@capacitor/browser": "^5.1.0",
+    "@capacitor/core": "5.5.0",
     "@capacitor/device": "^5.0.6",
-    "@capacitor/ios": "5.3.0",
+    "@capacitor/ios": "5.5.0",
     "@capacitor/local-notifications": "^5.0.6",
     "@capacitor/network": "^5.0.6",
     "@capacitor/splash-screen": "^5.0.6",
-    "@formkit/addons": "^0.19.3",
-    "@formkit/i18n": "^0.19.3",
-    "@formkit/themes": "^0.19.3",
-    "@formkit/vue": "^0.19.3",
-    "@mdi/font": "7.2.96",
+    "@formkit/addons": "^1.2.2",
+    "@formkit/i18n": "^1.2.2",
+    "@formkit/themes": "^1.2.2",
+    "@formkit/vue": "^1.2.2",
+    "@mdi/font": "7.3.67",
     "@popperjs/core": "^2.11.8",
     "@vueup/vue-quill": "^1.2.0",
-    "core-js": "3.32.1",
-    "firebase": "^10.3.0",
-    "pinia": "2.1.6",
+    "core-js": "3.33.1",
+    "firebase": "^10.5.0",
+    "pinia": "2.1.7",
     "roboto-fontface": "*",
     "v-calendar": "^3.0.3",
-    "vee-validate": "^4.11.3",
-    "vue": "3.3.4",
-    "vue-lite-youtube-embed": "^1.2.0",
+    "vee-validate": "^4.11.8",
+    "vue": "3.3.5",
+    "vue-lite-youtube-embed": "^1.2.1",
     "vue-picture-input": "^3.0.1",
-    "vue-router": "4.2.4",
-    "vuetify": "3.3.15",
+    "vue-router": "4.2.5",
+    "vuetify": "3.3.22",
     "webfontloader": "^1.0.0",
-    "yup": "^1.2.0"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
-    "@capacitor/cli": "5.3.0",
-    "@vitejs/plugin-vue": "^4.3.4",
-    "eslint": "^8.48.0",
+    "@capacitor/cli": "5.5.0",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "eslint": "^8.51.0",
     "eslint-plugin-vue": "^9.17.0",
-    "sass": "^1.66.1",
-    "vite": "^4.4.9",
-    "vite-plugin-vue-devtools": "^1.0.0-rc.3",
+    "sass": "^1.69.4",
+    "vite": "^4.5.0",
+    "vite-plugin-vue-devtools": "^1.0.0-rc.5",
     "vite-plugin-vuetify": "^1.0.0"
   }
 }
