--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -28,6 +28,11 @@
       "splashImmersive": true,
       "layoutName": "launch_screen",
       "useDialog": true
+    },
+    "plugins": {
+      "PushNotifications": {
+        "presentationOptions": ["badge", "sound", "alert"]
+      }
     }
   }
 }
