--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/ios": "5.5.0",
     "@capacitor/local-notifications": "^5.0.6",
     "@capacitor/network": "^5.0.6",
+    "@capacitor/push-notifications": "^5.1.0",
     "@capacitor/splash-screen": "^5.0.6",
     "@formkit/addons": "^1.2.2",
     "@formkit/i18n": "^1.2.2",
