--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "mbv.app",
   "author": "AndyKo",
-  "version": "0.9.10",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "vite",
     "host": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
+    "update": "yarn upgrade-interactive --latest",
     "lint": "eslint . --fix --ignore-path .gitignore",
     "ionic:build": "npm run build",
     "ionic:serve": "npm run dev"
@@ -23,34 +24,34 @@
     "@capacitor/network": "^5.0.6",
     "@capacitor/push-notifications": "^5.1.0",
     "@capacitor/splash-screen": "^5.0.6",
-    "@formkit/addons": "^1.2.2",
-    "@formkit/i18n": "^1.2.2",
-    "@formkit/themes": "^1.2.2",
-    "@formkit/vue": "^1.2.2",
+    "@formkit/addons": "^1.3.0",
+    "@formkit/i18n": "^1.3.0",
+    "@formkit/themes": "^1.3.0",
+    "@formkit/vue": "^1.3.0",
     "@mdi/font": "7.3.67",
     "@popperjs/core": "^2.11.8",
     "@vueup/vue-quill": "^1.2.0",
-    "core-js": "3.33.2",
-    "firebase": "^10.5.2",
+    "core-js": "3.33.3",
+    "firebase": "^10.6.0",
     "pinia": "2.1.7",
     "roboto-fontface": "*",
-    "v-calendar": "^3.0.3",
+    "v-calendar": "^3.1.2",
     "vee-validate": "^4.11.8",
-    "vue": "3.3.8",
+    "vue": "3.3.9",
     "vue-lite-youtube-embed": "^1.2.1",
     "vue-picture-input": "^3.0.1",
     "vue-router": "4.2.5",
-    "vuetify": "3.3.23",
+    "vuetify": "3.4.3",
     "webfontloader": "^1.0.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "@capacitor/cli": "5.5.1",
-    "@vitejs/plugin-vue": "^4.4.0",
-    "eslint": "^8.53.0",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "eslint": "^8.54.0",
     "eslint-plugin-vue": "^9.18.1",
     "sass": "^1.69.5",
-    "vite": "^4.5.0",
+    "vite": "^5.0.2",
     "vite-plugin-vue-devtools": "^1.0.0-rc.5",
     "vite-plugin-vuetify": "^1.0.0"
   }
